--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>  <!-- контейнер для всего содержимого, которое вы хотите включить в HTML-страницу, но не является содержимым, которое вы показываете посетителям вашей страницы -->
+    <head>  
         <meta charset="utf-8" /> <!-- установка набора символов -->
         <meta name="viewport" content="width=device-width" /> <!-- элемент видовой области обеспечивает отрисовку страницы на ширине области просмотра, предотвращая отрисовку страниц мобильными браузерами шире области просмотра, а затем уменьшая их.-->
-        <title>Portfolio</title> 
+        <title>Кречетников Артём</title> 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="assets/portfolio-svgrepo-com.svg" type="image/x-icon">
+        <link rel="shortcut icon" href="assets/portfolio-svgrepo-com.svg" type="image/x-icon">
     </head>
-    <body> <!-- содержит весь контент, который виден пользователям-->
+    <body> 
         <header>
             <a href="#"><h2>Визитка-портфолио</h2></a>
             <nav>
@@ -38,7 +40,9 @@
             <section id="about_me" class="container">
                 <h2 class="section_header">Обо мне</h2>
                 <div class="info">
-                    <p>Студент <b>МТУСИ</b>, направление <i>"Информатика и вычислительная техника"</i>, профиль <i>"Искусственный интеллект и машинное обучение"</i></p>
+                    <p>Студент <b>МТУСИ</b></p> 
+                    <p>Направление <i><b>"Информатика и вычислительная техника"</b></i></p>
+                    <p>Профиль <i><b>"Искусственный интеллект и машинное обучение"</b></i></p>
                     <p>Развиваюсь в сфере <b>AI</b>, <b>ML</b>, слежу за трендами <b>LLM</b></p>
                     <p>Уверен, что <b>за AI будущее</b>, потому что он делает жизни людей легче</p>
                 </div>
@@ -64,8 +68,8 @@
                     <div class="project">
                         <div class="about_project">
                             <h2>TeleDigest</h2>
-                            <p>Telegram бот, который собирает сообщения из чатов и каналов и отправляет саммари</p>
-                            <a href="#">Ссылка на github (будет позже)</a>
+                            <p>Telegram бот, который собирает сообщения из ваших чатов и каналов, отправляет саммари и может отвечать на вопросы по ним (если не работает, пишите в тг)</p>
+                            <a href="https://t.me/tg_aicopilot_bot">Ссылка на бота</a>
                         </div>
                     </div>
                 </div>
@@ -86,8 +90,8 @@
                             <h2>Cup IT 2025</h2>
                             <p>В рамках кейс чемпионата (сектор B2C) разработана банковская карта и UX/UI приложения для детей 6-14 лет</p>
                             <ul>
-                                <li><a href="assets/CupIT2025-ПМВ2С-команда“Без.pdf" download="Презентация Cup IT">Презентация</a></li>
-                                <li><a href="#">Диплом (будет позже)</a></li>
+                                <li><a href="assets/CupIT2025-ПМВ2С-команда“Без.pdf" download="Презентация Cup IT. Кречетников Артём">Презентация</a></li>
+                                <li><a href="assets/Cup IT 2025 - Диплом Артём Кречетников.pdf" download="Диплом Cup IT. Кречетников Артём">Диплом</a></li>
                             </ul>
                         </div>
                     </div>
@@ -130,7 +134,7 @@
                 <li><a href="https://vk.com/id350911289" target="_blank">VK</a></li>
                 <li><a href="mailto:krechetnikovartem@gmail.com" target="_blank">Почта: krechetnikovartem@gmail.com</a></li>
                 <li>Телефон: +79829824271</li>
-                <li>Адрес: г.Москва, общага мтуси №4</li>
+                <li>Адрес: г.Москва</li>
             </ul>
         </footer>
     </body>
