--- a/index.html
+++ b/index.html
@@ -137,5 +137,8 @@
                 <li>Адрес: г.Москва</li>
             </ul>
         </footer>
+        <script>
+            document.querySelector('.hamburger-menu').addEventListener('click', function() {document.querySelector('nav').classList.toggle('active');});
+        </script>
     </body>
 </html>
